--- a/src/main/java/Guis/GuiSelecciones.form
+++ b/src/main/java/Guis/GuiSelecciones.form
@@ -62,7 +62,7 @@
         <border type="none"/>
         <children/>
       </grid>
-      <component id="9eee0" class="javax.swing.JButton" binding="playersbtn">
+      <component id="9eee0" class="javax.swing.JButton" binding="playersBtn">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
