--- a/src/main/java/Guis/GuiSelecciones.form
+++ b/src/main/java/Guis/GuiSelecciones.form
@@ -21,7 +21,7 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <component id="4f75f" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+      <component id="4f75f" class="javax.swing.JComboBox" binding="seleccionesCombo">
         <constraints>
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -34,22 +34,11 @@
           </model>
         </properties>
       </component>
-      <component id="771cf" class="javax.swing.JTextField" binding="rankingFIFATextField" default-binding="true">
-        <constraints>
-          <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="Ranking FIFA"/>
-        </properties>
-      </component>
       <component id="28ac7" class="javax.swing.JLabel" binding="Imagen">
         <constraints>
           <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <icon value="Datos/datos/chi.png"/>
           <text value=""/>
         </properties>
       </component>
@@ -78,6 +67,24 @@
           <text value="Exit"/>
         </properties>
       </component>
+      <grid id="bd9d3" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="48373" class="javax.swing.JLabel" binding="rankinBtn">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Ranking Selecciones"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
     </children>
   </grid>
 </form>
